fix: image and text conflicting lifecycle and z-index

--- a/src/index.css
+++ b/src/index.css
@@ -313,7 +313,7 @@ body {
   }
 
   #finder {
-    @apply absolute w-full md:w-3xl left-0 md:left-40 top-11 md:top-20 shadow-2xl drop-shadow-2xl overflow-hidden rounded-none md:rounded-xl;
+    @apply absolute w-full md:w-3xl h-full md:h-[480px] left-0 md:left-40 top-11 md:top-20 shadow-2xl drop-shadow-2xl overflow-hidden rounded-none md:rounded-xl;
 
     .sidebar {
       @apply w-48 flex-none bg-gray-50 border-r border-gray-200 flex flex-col p-5 space-y-3;
